--- a/homepage.css
+++ b/homepage.css
@@ -16,8 +16,24 @@ header h1{
 }
 header h2 {
     font-weight: 100;
-    font-size: 50px;
+    font-size: 40px;
     line-height: 60px;
+    margin-bottom: 35px;
+}
+header .big-link {
+    color: #fff;
+    border: 2px solid #fff;
+    padding: 6px 12px;
+    font-size: 40px;
+    line-height: 46px;
+    border-radius: 6px;
+    font-weight: 100;
+    margin-top: 20px;
+}
+header .big-link:hover {
+    text-decoration: none;
+    color: #f16956;
+    background: #fff;
 }
 
 /* Sections */
@@ -41,6 +57,38 @@ section p {
     margin-bottom: 10px;
 }
 
+/* Values */
+.values {
+    margin-top: 30px;
+    text-align: center;
+}
+.values .value {
+    max-width: 250px;
+    width: 100%;
+    margin: 16px;
+    display: inline-block;
+    vertical-align: top;
+}
+.values .value .value-icon {
+    position: relative;
+    margin-bottom: 15px;
+    text-align: center;
+    height: 110px;
+    font-size: 100px;
+    line-height: 100px;
+}
+.values .value h3 {
+    margin-bottom: 5px;
+    text-align: center;
+    font-weight: normal;
+}
+.values .value p {
+    font-size: 15px;
+    line-height: 22px;
+    text-align: center;
+    font-weight: 200;
+}
+
 /* Teams */
 .team {
     margin-top: 30px;
@@ -48,28 +96,28 @@ section p {
 }
 .team li {
     float: left;
-    width: 132px;
+    width: 160px;
     text-align: center;
-    margin: 0 26px 6px 0;
+    margin: 0 6px 6px 0;
 }
 .team li img {
-    height: 100px;
-    width: 100px;
+    height: 140px;
+    width: 140px;
     border: 4px solid white;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
-    margin-bottom: 7px;
 }
 .team li .icon {
     color: #333;
-    font-size: 72px;
-    line-height: 108px;
+    font-size: 90px;
+    line-height: 140px;
 }
 .team li h4 {
     width: 100%;
-    font-size: 14px;
+    font-size: 16px;
     margin: 0;
+    margin-top: 7px;
 }
 .team li p {
     position: relative;
@@ -77,7 +125,9 @@ section p {
     font-weight: normal;
     line-height: 20px;
     padding: 0;
-    font-size: 11px;
+    font-size: 12px;
+    margin: 0px;
+    margin-top: 5px;
 }
 
 /* Footer */
